; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/hwmon/extr_via686a.c_TEMP_TO_REG.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/hwmon/extr_via686a.c_TEMP_TO_REG.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@viaLUT = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @TEMP_TO_REG to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @TEMP_TO_REG(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i32*, i32** @viaLUT, align 8
  %4 = load i64, i64* %2, align 8
  %5 = icmp sle i64 %4, -50000
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %26

7:                                                ; preds = %1
  %8 = load i64, i64* %2, align 8
  %9 = icmp sge i64 %8, 110000
  br i1 %9, label %10, label %11

10:                                               ; preds = %7
  br label %24

11:                                               ; preds = %7
  %12 = load i64, i64* %2, align 8
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %11
  %15 = load i64, i64* %2, align 8
  %16 = sub nsw i64 %15, 500
  br label %20

17:                                               ; preds = %11
  %18 = load i64, i64* %2, align 8
  %19 = add nsw i64 %18, 500
  br label %20

20:                                               ; preds = %17, %14
  %21 = phi i64 [ %16, %14 ], [ %19, %17 ]
  %22 = sdiv i64 %21, 1000
  %23 = add nsw i64 %22, 50
  br label %24

24:                                               ; preds = %20, %10
  %25 = phi i64 [ 160, %10 ], [ %23, %20 ]
  br label %26

26:                                               ; preds = %24, %6
  %27 = phi i64 [ 0, %6 ], [ %25, %24 ]
  %28 = getelementptr inbounds i32, i32* %3, i64 %27
  %29 = load i32, i32* %28, align 4
  ret i32 %29
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
